Fix vertical align for kid__block

--- a/app/sass/_kid.sass
+++ b/app/sass/_kid.sass
@@ -9,6 +9,7 @@
     display: flex
     flex-direction: column
     align-items: flex-start
+    justify-content: space-between
     text-align: left
 
     span
